-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
Windows
-
Security 2021-11-01
-
136
-
None
-
None
-
None
-
None
-
None
-
None
-
None
BF-22963 appears to be caused by winldap occasionally enforcing the timeout rather than the connection pool. This results in situations where more auth attempts fail than expected by the test, since the ldap_timeout_pooled.js test assumes that the native LDAP libraries are essentially not working and purely tries to test that MongoDB's connection pool is enforcing the timeouts as intended.
In order to ensure that the test is only validating the LDAP connection pool's ability to enforce timeouts, an additional failpoint should be created and set by the test which effectively disables or resets the native LDAP library's timeout to some arbitrarily high value. This should result in a consistent number of expected successes and failures that aligns with what the test currently expects.