SERVER-60908: Reset native LDAP connection timeouts on timeout tests

GitOrigin-RevId: 1918dbde223d887dd0075cb7470b67bca6c4e746